--- a/app/components/exporter.module.scss
+++ b/app/components/exporter.module.scss
@@ -11,7 +11,7 @@
 
 .steps {
   background-color: var(--gray);
-  border-radius: 10px;
+  border-radius: 6px;
   overflow: hidden;
   padding: 5px;
   position: relative;
@@ -66,7 +66,7 @@
       }
 
       &-current {
-        color: var(--primary);
+        color: var(--primary-color);
       }
 
       .step-index {
@@ -102,15 +102,15 @@
 
 .image-previewer {
   .preview-body {
-    border-radius: 10px;
+    border-radius: 6px;
     padding: 20px;
     box-shadow: var(--card-shadow) inset;
     background-color: var(--gray);
 
     .chat-info {
-      background-color: var(--second);
+      background-color: var(--second-color);
       padding: 20px;
-      border-radius: 10px;
+      border-radius: 6px;
       margin-bottom: 20px;
       display: flex;
       justify-content: space-between;
@@ -153,15 +153,15 @@
           font-size: 12px;
           margin: 0 10px;
           font-weight: bolder;
-          color: var(--primary);
+          color: var(--primary-color);
         }
       }
 
       .chat-info-item {
         font-size: 12px;
-        color: var(--primary);
+        color: var(--primary-color);
         padding: 2px 15px;
-        border-radius: 10px;
+        border-radius: 6px;
         background-color: var(--white);
         box-shadow: var(--card-shadow);
 
@@ -180,7 +180,7 @@
       }
 
       .body {
-        border-radius: 10px;
+        border-radius: 6px;
         padding: 8px 10px;
         max-width: calc(100% - 104px);
         box-shadow: var(--card-shadow);
@@ -206,7 +206,7 @@
         }
 
         .body {
-          background-color: var(--second);
+          background-color: var(--second-color);
           margin-right: 10px;
         }
       }
