--- a/app/components/home.module.scss
+++ b/app/components/home.module.scss
@@ -1,6 +1,5 @@
 @mixin container {
   background-color: var(--white);
-  border: var(--border-in-light);
   border-radius: 20px;
   box-shadow: var(--shadow);
   color: var(--black);
@@ -25,42 +24,23 @@
   .tight-container {
     --window-width: 100vw;
     --window-height: var(--full-height);
-    --window-content-width: calc(100% - var(--sidebar-width));
+    //--window-content-width: calc(100% - var(--sidebar-width));
 
     @include container();
-
     max-width: 100vw;
     max-height: var(--full-height);
-
     border-radius: 0;
     border: 0;
   }
 }
 
 .sidebar {
-  top: 0;
-  width: var(--sidebar-width);
   box-sizing: border-box;
-  padding: 20px;
-  background-color: var(--second);
+  padding: 0;
+  background-color: var(--second-color);
   display: flex;
-  flex-direction: column;
-  box-shadow: inset -2px 0px 2px 0px rgb(0, 0, 0, 0.05);
   position: relative;
   transition: width ease 0.05s;
-
-  .sidebar-header-bar {
-    display: flex;
-    margin-bottom: 20px;
-
-    .sidebar-bar-button {
-      flex-grow: 1;
-
-      &:not(:last-child) {
-        margin-right: 10px;
-      }
-    }
-  }
 
   &:hover,
   &:active {
@@ -101,6 +81,129 @@
   flex-direction: column;
 }
 
+.sidebar-bottom {
+  width: 100%;
+  background: var(--white);
+  position: relative;
+  border-top: 1px solid #eee;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-grow: 1;
+
+  .sidebar-footer-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-grow: 1;
+    .sidebar-bar-button {
+      flex-grow: 1;
+      display: flex;
+      margin-left: 5px;
+      flex-direction: column;
+      margin-top: 0;
+      background: unset;
+      border-radius: 0;
+      box-shadow: unset;
+      border-radius: 8px;
+      width: 58px;
+      padding: 5px;
+    }
+  }
+
+  .sidebar-header-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-grow: 1;
+    .sidebar-bar-button {
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      background: unset;
+      border-radius: 0;
+      box-shadow: unset;
+      border-radius: 8px;
+      width: 58px;
+      padding: 5px;
+    }
+
+    .sidebar-active {
+      color: var(--active-color);
+    }
+
+    .sidebar-bar-button:hover {
+      color: var(--active-color);
+    }
+  }
+}
+
+.sidebar-left {
+  width: var(--bar-width);
+  background: var(--white);
+  position: relative;
+  border-right: 1px solid var(--gray);
+  display: flex;
+  flex-direction: column;
+  .sidebar-footer-bar {
+    position: absolute;
+    bottom: 20px;
+    .sidebar-bar-button {
+      flex-grow: 1;
+      display: flex;
+      margin-left: 5px;
+      flex-direction: column;
+      margin-top: 0;
+      background: unset;
+      border-radius: 0;
+      box-shadow: unset;
+      border-radius: 8px;
+      width: 58px;
+      padding: 5px;
+    }
+  }
+  .sidebar-header-bar {
+    display: flex;
+    width: var(--bar-width);
+    margin-bottom: 20px;
+    position: absolute;
+    top: 100px;
+    flex-direction: column;
+    .sidebar-bar-button {
+      flex-grow: 1;
+      display: flex;
+      margin-left: 5px;
+      flex-direction: column;
+      margin-top: 20px;
+      background: unset;
+      border-radius: 0;
+      box-shadow: unset;
+      border-radius: 8px;
+      width: 58px;
+      padding: 5px;
+    }
+
+    .sidebar-active {
+      background: #d2a8ff42;
+      color: var(--active-color);
+    }
+
+    .sidebar-bar-button:hover {
+      color: var(--active-color);
+    }
+  }
+}
+
+.sidebar-right {
+  padding: 0 10px;
+  display: flex;
+  flex-direction: column;
+  border-right: 1px solid var(--gray);
+  background: var(--subbar-bg);
+  width: var(--sidebar-width);
+  box-sizing: border-box;
+}
+
 .mobile {
   display: none;
 }
@@ -117,7 +220,7 @@
 
   .sidebar {
     position: absolute;
-    left: -100%;
+    left: -200%;
     z-index: 1000;
     height: var(--full-height);
     transition: all ease 0.3s;
@@ -139,10 +242,23 @@
   padding-bottom: 20px;
 }
 
-.sidebar-logo {
+.sidebar-toolbar {
   position: absolute;
   right: 0;
-  bottom: 18px;
+  top: 25px;
+}
+
+.sidebar-toolbar button {
+  background: unset;
+  border-radius: 0;
+  box-shadow: unset;
+  color: var(--gray);
+}
+
+.sidebar-logo {
+  position: absolute;
+  right: 10px;
+  top: 18px;
 }
 
 .sidebar-title {
@@ -154,6 +270,7 @@
 .sidebar-sub-title {
   font-size: 12px;
   font-weight: 400;
+  color: darkgray;
   animation: slide-in ease 0.3s;
 }
 
@@ -163,31 +280,41 @@
   overflow-x: hidden;
 }
 
+.chat-item-inner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .chat-item-inner-desc {
+    flex-grow: 1;
+  }
+  .chat-item-inner-sub {
+    flex: none;
+    width: 50px;
+  }
+}
+
 .chat-item {
-  padding: 10px 14px;
-  background-color: var(--white);
-  border-radius: 10px;
+  padding: 10px 5px;
+  border-radius: 8px;
   margin-bottom: 10px;
-  box-shadow: var(--card-shadow);
   transition: background-color 0.3s ease;
   cursor: pointer;
   user-select: none;
-  border: 2px solid transparent;
   position: relative;
   content-visibility: auto;
 }
 
 .chat-item:hover {
-  background-color: var(--hover-color);
+  background: var(--item-select-color);
 }
 
 .chat-item-selected {
-  border-color: var(--primary);
+  background: var(--item-select-color);
 }
 
 .chat-item-title {
-  font-size: 14px;
-  font-weight: bolder;
+  font-size: 13px;
+  font-weight: 400;
   display: block;
   width: calc(100% - 15px);
   overflow: hidden;
@@ -198,8 +325,8 @@
 
 .chat-item-delete {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 5px;
+  right: 5px;
   transition: all ease 0.3s;
   opacity: 0;
   cursor: pointer;
@@ -217,7 +344,7 @@
 .chat-item-info {
   display: flex;
   justify-content: space-between;
-  color: rgb(166, 166, 166);
+  color: #76787b;
   font-size: 12px;
   margin-top: 8px;
   animation: slide-in ease 0.3s;
@@ -228,6 +355,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  width: 80px;
 }
 
 .narrow-sidebar {
@@ -291,7 +419,7 @@
       font-size: 24px;
       font-weight: bolder;
       text-align: center;
-      color: var(--primary);
+      color: var(--primary-color);
       opacity: 0.6;
     }
   }
@@ -316,6 +444,10 @@
   display: flex;
   justify-content: space-between;
   padding-top: 20px;
+  position: absolute;
+  bottom: 0;
+  height: 60px;
+  width: 100%;
 }
 
 .sidebar-actions {
