--- a/app/components/home.module.scss
+++ b/app/components/home.module.scss
@@ -85,7 +85,7 @@
   width: 100%;
   background: var(--white);
   position: relative;
-  border-top: 1px solid #eee;
+  border-top: 1px solid var(--gray);
   display: flex;
   justify-content: space-between;
   align-items: center;
