--- a/app/components/chat.module.scss
+++ b/app/components/chat.module.scss
@@ -76,7 +76,7 @@
     justify-content: center;
     align-items: center;
     font-size: 12px;
-    background-color: var(--white);
+    background-color: var(--white-3);
     color: var(--black);
 
     box-shadow: var(--card-shadow);
