--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -7,6 +7,7 @@
   /* color */
   --white: white;
   --white-2: white;
+  --white-3: white;
   --black: rgb(48, 48, 48);
   --gray: rgb(250, 250, 250);
   --td-bg-color-secondarycontainer: #f3f3f3;
@@ -16,17 +17,25 @@
   --fourth-color: #c9f3cc;
   --chat-text-bg: #eee;
   --gray: #eee;
-  --gray-2: #eee;
+  --gray-2: #ccc;
   --td-brand-color: #8250df;
   --td-brand-color-focus: #c0d8ff;
   --dark-gray: #8a8d90;
-  --bg-color-1: #c9f3cc;
+  --bg-color-1: #eddcfd;
   --hover-color: #f3f3f3;
   --bar-color: rgba(0, 0, 0, 0.1);
   --theme-color: var(--gray);
   --subbar-bg: #f8f3fc;
   --item-select-color: rgb(236 220 253);
+  --item-hover-color: rgba(236, 220, 253, 0.4);
   --active-color: #8250df;
+  --subbar-title: #fa8f31;
+  --subbar-bg-gradient: radial-gradient(
+      circle,
+      rgb(130 81 224 / 30%) 0%,
+      rgb(248 243 253) 50%
+    ),
+    url(/research.svg);
 
   /* shadow */
   --shadow: 0px 3px 14px 2px rgba(0, 0, 0, 0.05),
@@ -40,13 +49,14 @@
 @mixin dark {
   --theme: dark;
   --bar-width: 68px;
-  --chat-text-bg: ffffff1a;
+  --chat-text-bg: #f8f8f81a;
   /* color */
   --white: #1e1e1e;
-  --black: rgb(187, 187, 187);
+  --black: #f5f5f5;
   --gray: #eeeeee14;
   --gray-2: #393939;
   --white-2: #393939;
+  --white-3: #2f2f2f;
   --td-brand-color: #8250df;
   --td-bg-color-secondarycontainer: #c0d8ff28;
   --td-brand-color-focus: #c0d8ff3e;
@@ -56,15 +66,20 @@
   --third-color: #f8f3fd;
   --fourth-color: #c9f3cc;
   --hover-color: #323232;
-  --bg-color-1: #c9f3cc2b;
+  --bg-color-1: #fcfcfc30;
   --subbar-bg: #1e1e1e;
+  --subbar-title: #fa8f31;
   --item-select-color: rgb(236 220 253 / 11%);
+  --item-hover-color: rgb(236 220 253 / 5%);
   --active-color: #ae87f6;
-
+  --subbar-bg-gradient: radial-gradient(
+      circle,
+      rgb(0 0 0 / 65%) 0%,
+      #1e1e1e 50%
+    ),
+    url(/research.svg);
   --bar-color: rgba(255, 255, 255, 0.1);
-
   --border-in-light: 1px solid rgba(255, 255, 255, 0.192);
-
   --theme-color: var(--gray);
 
   div:not(.no-dark) > svg {
