update ui logo color

--- a/app/components/home.module.scss
+++ b/app/components/home.module.scss
@@ -253,7 +253,7 @@
 .sidebar-title {
   font-size: 20px;
   font-weight: bold;
-  color: var(--primary-color);
+  color: var(--logo-color);
   animation: slide-in ease 0.3s;
   font-family: "钉钉进步体 Regular";
 }
