--- a/app/components/home.module.scss
+++ b/app/components/home.module.scss
@@ -223,15 +223,22 @@
 
 .sidebar-toolbar {
   position: absolute;
-  right: 0;
+  right: 20px;
   top: 25px;
+  background: var(--logo-color);
+  border-radius: 25px;
+  height: 25px;
+  width: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar-toolbar button {
   background: unset;
   border-radius: 0;
   box-shadow: unset;
-  color: var(--gray);
+  color: var(--primary-color);
 }
 
 .sidebar-logo {
@@ -239,7 +246,7 @@
   right: 10px;
   top: 18px;
   .icon {
-    fill: #fff;
+    fill: var(--logo-color);
   }
 }
 
