--- a/app/components/chat.module.scss
+++ b/app/components/chat.module.scss
@@ -254,6 +254,11 @@
   flex-direction: column;
   position: relative;
   height: 100%;
+
+  .full-width {
+    background: var(--primary-color);
+    color: var(--logo-color);
+  }
 }
 
 .chat-body {
