--- a/app/components/home.module.scss
+++ b/app/components/home.module.scss
@@ -212,13 +212,42 @@
   flex: 1;
   overflow: auto;
   overflow-x: hidden;
-  padding: 0 5px;
 }
 
 .sidebar-header {
   position: relative;
   padding: 14px 20px;
   margin-bottom: 10px;
+  display: flex;
+  box-sizing: border-box;
+  height: 68px;
+
+  .sidebar-title-left {
+    width: 60px;
+    display: flex;
+    margin-right: 10px;
+    justify-content: center;
+    align-items: center;
+    .sidebar-logo {
+      position: relative;
+      top: unset;
+      right: unset;
+      .user-avatar {
+        background: var(--logo-color);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 21px;
+        overflow: hidden;
+        .icon {
+          fill: var(--primary-color);
+        }
+      }
+    }
+  }
+  .sidebar-title-right {
+    flex-grow: 1;
+  }
 }
 
 .sidebar-toolbar {
@@ -263,6 +292,7 @@
   color: var(--logo-color);
   animation: slide-in ease 0.3s;
   font-family: "钉钉进步体 Regular";
+  display: flex;
 }
 
 .sidebar-sub-title {
@@ -278,17 +308,15 @@
   justify-content: center;
   align-items: center;
   .chat-item-inner-desc {
-    flex-grow: 1;
+    width: calc(100% - 50px);
   }
   .chat-item-inner-sub {
-    flex: none;
     width: 50px;
   }
 }
 
 .chat-item {
   padding: 10px 5px;
-  border-radius: 6px;
   transition: background-color 0.3s ease;
   cursor: pointer;
   user-select: none;
@@ -483,11 +511,11 @@
   }
 
   .sidebar-body {
-    padding: 0 20px;
+    padding: 0;
   }
 
   .chat-item {
-    padding: 10px;
+    padding: 15px 20px;
   }
 
   .sidebar {
