update ui bar & font family

--- a/app/components/exporter.module.scss
+++ b/app/components/exporter.module.scss
@@ -45,7 +45,7 @@
 
     .step {
       flex-grow: 1;
-      padding: 5px 10px;
+      padding: 10px;
       font-size: 14px;
       color: var(--black);
       opacity: 0.5;
