--- a/app/components/home.module.scss
+++ b/app/components/home.module.scss
@@ -291,7 +291,7 @@
   font-weight: bold;
   color: var(--logo-color);
   animation: slide-in ease 0.3s;
-  font-family: "钉钉进步体 Regular";
+  font-family: "TTTGBMedium";
   display: flex;
 }
 
@@ -300,6 +300,7 @@
   font-weight: 400;
   margin-top: 5px;
   color: var(--subbar-title);
+  font-family: "TTTGBMedium";
   animation: slide-in ease 0.3s;
 }
 
