--- a/app/components/button.module.scss
+++ b/app/components/button.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 4px 8px;
+  padding: 8px 16px;
 
   cursor: pointer;
   transition: all 0.3s ease;
@@ -42,6 +42,15 @@
       fill: red !important;
     }
   }
+
+  &.default {
+    background-color: var(--gray);
+    color: var(--black);
+
+    path {
+      fill: var(--black) !important;
+    }
+  }
 }
 
 .shadow {
@@ -53,8 +62,6 @@
 }
 
 .icon-button-icon {
-  width: 32px;
-  height: 32px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -72,4 +79,5 @@
   text-align: center;
   text-overflow: ellipsis;
   white-space: nowrap;
+  margin-left: 5px;
 }
