--- a/app/components/new-chat.module.scss
+++ b/app/components/new-chat.module.scss
@@ -39,9 +39,9 @@
     }
 
     .mask-card {
-      padding: 20px 10px;
+      padding: 40px 20px;
       border: var(--border-in-light);
-      box-shadow: var(--card-shadow);
+      box-shadow: var(--shadow);
       border-radius: 14px;
       background-color: var(--white);
       transform: scale(1);
