--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -9,7 +9,6 @@
   --white-2: white;
   --white-3: white;
   --black: rgb(48, 48, 48);
-  --gray: rgb(250, 250, 250);
   --td-bg-color-secondarycontainer: #f3f3f3;
   --primary-color: #8250df;
   --logo-color: #fff;
@@ -27,19 +26,14 @@
   --bar-color: rgba(0, 0, 0, 0.1);
   --theme-color: var(--gray);
   --subbar-bg: #eeeeee38;
-  --item-select-color: rgb(236 220 253);
-  --item-hover-color: rgba(236, 220, 253, 0.4);
+  --item-select-color: #e2e2e2;
+  --item-hover-color: #eee;
   --active-color: #8250df;
   --subbar-title: #ffffffb7;
   --mask-card-color-1: #8250df;
   --mask-card-color-2: #5f9ea0;
   --mask-card-color-3: #22b8cf;
-  --subbar-bg-gradient: radial-gradient(
-      circle,
-      rgb(130 81 224 / 20%) 0%,
-      rgb(130 81 224 / 98%) 50%
-    ),
-    url(/research.svg) #8250df;
+  --subbar-bg-gradient: #8250df;
 
   /* shadow */
   --shadow: 0px 3px 14px 2px rgba(0, 0, 0, 0.05),
@@ -80,12 +74,7 @@
   --mask-card-color-1: #8250df;
   --mask-card-color-2: #5f9ea0;
   --mask-card-color-3: #22b8cf;
-  --subbar-bg-gradient: radial-gradient(
-      circle,
-      rgb(130 81 224 / 20%) 0%,
-      rgb(130 81 224 / 98%) 50%
-    ),
-    url(/research.svg) #8250df;
+  --subbar-bg-gradient: #8250df;
   --bar-color: rgba(255, 255, 255, 0.1);
   --border-in-light: 1px solid rgba(255, 255, 255, 0.192);
   --theme-color: var(--gray);
