--- a/app/components/chat.module.scss
+++ b/app/components/chat.module.scss
@@ -8,7 +8,7 @@
     display: inline-flex;
     border-radius: 20px;
     font-size: 12px;
-    background-color: var(--bg-color-1);
+    background-color: var(--gray);
     color: var(--black);
     border: 0;
     padding: 4px 10px;
