--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -11,6 +11,7 @@
   --black: rgb(48, 48, 48);
   --td-bg-color-secondarycontainer: #f3f3f3;
   --primary-color: #8250df;
+  --success-color: #13a10e;
   --logo-color: #fff;
   --second-color: #fff;
   --third-color: #f8f3fd;
@@ -60,6 +61,7 @@
   --td-brand-color-focus: #c0d8ff3e;
   --dark-gray: #ccc;
   --primary-color: #8250df;
+  --success-color: #13a10e;
   --logo-color: #fff;
   --second-color: rgb(27 38 42);
   --third-color: #f8f3fd;
