新增baidu和google搜索支持

--- a/app/components/chat.module.scss
+++ b/app/components/chat.module.scss
@@ -393,6 +393,9 @@
 
 .chat-message-tools-name {
   color: var(--dark-gray);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .chat-message-tools-details {
