--- a/app/components/ui-lib.module.scss
+++ b/app/components/ui-lib.module.scss
@@ -226,6 +226,33 @@
   min-width: 50px;
 }
 
+.dropdown-with-icon {
+  position: relative;
+
+  .dropdown-with-icon-select {
+    height: 100%;
+    padding: 5px;
+    border: 0;
+    cursor: pointer;
+    color: #4d59ec;
+    text-align: left;
+  }
+
+  .dropdown-with-icon-select:focus {
+    box-shadow: unset;
+  }
+
+  .dropdown-with-icon-icon {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    pointer-events: none;
+  }
+}
+
+
+
 .select-with-icon {
   position: relative;
   max-width: fit-content;
